Endpoint for hours of login times
